k8s/prometheus/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.homelab.local
    http:
      paths:
        - path: /grafana
          pathType: Exact
          backend:
            service:
              name: grafana
              port:
                number: 3000
status:
  loadBalancer:
    ingress:
    - ip: 192.168.122.240
